<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <View style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_alignBottom="@id/title"
        android:layout_marginTop="15dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/welcomeHomeStaff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/login_success"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/matric"
            android:layout_width="300sp"
            android:layout_height="60sp"
            android:layout_margin="20sp"
            android:background="@drawable/textbox_design_1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_centerHorizontal="true"
            android:hint="@string/matricHint"
            android:layout_below="@id/welcomeHomeStaff"/>

        <Button
            android:id="@+id/searchMatric"
            android:layout_width="300sp"
            android:background="@drawable/button_design_1"
            android:layout_height="wrap_content"
            android:text="@string/searchByMatric"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/matric"/>

        <Button
            android:id="@+id/qrScan"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_design_1"
            android:text="@string/searchByQR"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="20sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/searchMatric"/>/>

        <Button
            android:id="@+id/logoutStaff"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_design_1"
            android:text="@string/logout"
            android:textSize="15sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/qrScan"/>

    </RelativeLayout>


</RelativeLayout>