<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <View style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_alignBottom="@id/title"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/welcomeHomeStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/login_success"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/registerSession"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcomeHomeStudent"
            android:text="@string/registerSession"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:layout_margin="20sp"
            android:background="@drawable/button_design_1"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/editOrViewSession"
            android:layout_width="300sp"
            android:background="@drawable/button_design_1"
            android:layout_height="wrap_content"
            android:text="@string/editSession"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:layout_margin="20sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/registerSession"/>

        <Button
            android:id="@+id/logoutStudent"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_design_1"
            android:text="@string/logout"
            android:textSize="15sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/editOrViewSession"/>

    </RelativeLayout>

</RelativeLayout>