<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <View style="@style/Divider"
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_alignBottom="@id/title"
        android:layout_marginTop="15dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/divider"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/titleSuccessRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50sp"
            android:text="@string/success_register"
            android:textSize="25sp"/>

        <RelativeLayout
            android:id="@+id/totalCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleSuccessRegistration"
            android:layout_marginTop="30sp">

            <TextView
                android:id="@+id/tvCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/totalCost"
                android:textSize="20sp"
                android:layout_marginLeft="30sp"/>

            <TextView
                android:id="@+id/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency"
                android:textSize="20sp"
                android:layout_marginStart="10sp"
                android:layout_toStartOf="@id/cost"/>

            <TextView
                android:id="@+id/cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textSize="20sp"
                android:layout_marginStart="30sp"
                android:layout_marginEnd="30sp"/>

        </RelativeLayout>

        <ImageView
            android:id="@+id/qr_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/totalCost"
            android:layout_margin="15sp"/>

        <TextView
            android:id="@+id/msg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/successRegisterMsg"
            android:textSize="20sp"
            android:layout_below="@id/qr_code"
            android:layout_margin="20sp"/>

        <Button
            android:id="@+id/back2MainMenu"
            android:layout_width="300sp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_design_1"
            android:layout_height="wrap_content"
            android:text="@string/back2mainmenu"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:layout_margin="20sp"
            android:layout_below="@id/msg1"/>

    </RelativeLayout>

</RelativeLayout>