<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <View style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_alignBottom="@id/title"
        android:layout_marginTop="15dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/welcomeMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:textSize="25sp"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/loginStudent"
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:background="@drawable/button_design_1"
            android:layout_below="@id/welcomeMsg"
            android:layout_marginTop="30sp"
            android:text="@string/student"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/loginStaff"
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_design_1"
            android:layout_below="@id/loginStudent"
            android:layout_marginTop="30sp"
            android:text="@string/staff"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"/>




    </RelativeLayout>

</RelativeLayout>