<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <View style="@style/Divider"
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_alignBottom="@id/title"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20sp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/smallItemsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/getSmall"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:layout_margin="10sp"/>

                <TextView
                    android:id="@+id/smallItemsHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/smallItemsText"
                    android:textSize="15sp"
                    android:text="@string/itemHint"
                    android:layout_marginStart="10sp"/>

                <Spinner
                    android:id="@+id/getSmallItems"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignEnd="@id/smallItemsText"
                    android:layout_margin="10sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/mediumItemsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/getMedium"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:layout_margin="10sp"/>

                <TextView
                    android:id="@+id/mediumItemsHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mediumItemsText"
                    android:textSize="15sp"
                    android:text="@string/itemHint"
                    android:layout_marginStart="10sp"/>

                <Spinner
                    android:id="@+id/getMediumItems"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignEnd="@id/mediumItemsText"
                    android:layout_margin="10sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/largeItemsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:textColor="#000000"
                    android:text="@string/getLarge"
                    android:textSize="20sp"
                    android:layout_margin="10sp"/>

                <TextView
                    android:id="@+id/largeItemsHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/largeItemsText"
                    android:textSize="15sp"
                    android:text="@string/itemHint"
                    android:layout_marginStart="10sp"/>

                <Spinner
                    android:id="@+id/getLargeItems"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignEnd="@id/largeItemsText"
                    android:layout_margin="10sp"/>

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/redWarningMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/content"
            android:layout_marginTop="20sp"
            android:layout_marginHorizontal="20sp"
            android:text="@string/warning"
            android:textSize="20sp"
            android:textColor="#FD0101"/>

        <TextView
            android:id="@+id/warnMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/redWarningMsg"
            android:layout_marginHorizontal="20sp"
            android:text="@string/warnMsg"
            android:textSize="20sp"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/register"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_design_1"
            android:layout_marginTop="20sp"
            android:layout_below="@id/warnMsg"/>

        <Button
            android:id="@+id/back2MainMenu"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:text="@string/back2mainmenu"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_design_1"
            android:layout_marginTop="20sp"
            android:layout_below="@id/register"/>

    </RelativeLayout>
</RelativeLayout>